--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,8 +68,8 @@ header {
     width: 100%;
     height: 600px;
     background: #bc4e9c;
-    background: -webkit-linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/portada.jpg);
-    background: linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/portada.jpg);
+    background: -webkit-linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/cines.jpg);
+    background: linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/cines.jpg);
     background-size: cover;
     background-attachment: fixed;
     position: relative;
@@ -114,11 +114,25 @@ header .textos-header{
     color:#fff;
 }
 
+.titulo h3{
+    font-size: 30px;
+    font-weight: 300;
+    color:#fff;
+}
+
+
 .wave{
     position: absolute;
     bottom: 0;
     width: 100%;
 }
+
+.wav{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 
 /* About us */
 
@@ -301,7 +315,6 @@ footer{
     margin: auto;
     padding-bottom: 50px;
     border-bottom: 1px solid #ccc;
-    
 }
 
 .content-foo{
@@ -462,64 +475,4 @@ footer{
     .titulo-final{
         font-size: 20px;
     }
-
-    
 }
-
-img {
-    margin-bottom: 10px;
-}
-
-/*Formatos para página noticias y contacto*/
-
-.noticia { width: 75%;  float: left; }
-
-.sidebar{ width: 25%; float: left; }
-
-.titulo_noticia{
-font-size: 40px;
-text-align: center;
-}
-
-.texto-anuncio{
-    font-size: 10px;
-    }
-
-/*Formato de formulario contacto*/
-
-.formulario_contacto { width: 100%;   }
-
-
-input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-    
-  }
-  
-  /* Style the submit button with a specific background color etc */
-  input[type=submit] {
-    background-color: #cd707a;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  /* When moving the mouse over the submit button, add a darker green color */
-  input[type=submit]:hover {
-    background-color: #b3444d;
-  }
-  
-  /* Add a background color and some padding around the form */
-  .contenedor_formulario {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
