--- a/css/estilos.css
+++ b/css/estilos.css
@@ -301,6 +301,7 @@ footer{
     margin: auto;
     padding-bottom: 50px;
     border-bottom: 1px solid #ccc;
+    
 }
 
 .content-foo{
@@ -498,11 +499,12 @@ input[type=text], select, textarea {
     margin-top: px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
     resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    
   }
   
   /* Style the submit button with a specific background color etc */
   input[type=submit] {
-    background-color: #04AA6D;
+    background-color: #cd707a;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -512,11 +514,11 @@ input[type=text], select, textarea {
   
   /* When moving the mouse over the submit button, add a darker green color */
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #b3444d;
   }
   
   /* Add a background color and some padding around the form */
-  .container {
+  .contenedor_formulario {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
