--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,8 +68,8 @@ header {
     width: 100%;
     height: 600px;
     background: #bc4e9c;
-    background: -webkit-linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/cines.jpg);
-    background: linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/cines.jpg);
+    background: -webkit-linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/portada.jpg);
+    background: linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/portada.jpg);
     background-size: cover;
     background-attachment: fixed;
     position: relative;
@@ -114,25 +114,11 @@ header .textos-header{
     color:#fff;
 }
 
-.titulo h3{
-    font-size: 30px;
-    font-weight: 300;
-    color:#fff;
-}
-
-
 .wave{
     position: absolute;
     bottom: 0;
     width: 100%;
 }
-
-.wav{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-}
-
 
 /* About us */
 
@@ -475,4 +461,29 @@ footer{
     .titulo-final{
         font-size: 20px;
     }
+
+    
 }
+
+img {
+    margin-bottom: 10px;
+}
+
+/*Formatos para página noticias y contacto*/
+
+.noticia { width: 75%;  float: left; }
+
+.sidebar{ width: 25%; float: left; }
+
+.titulo_noticia{
+font-size: 40px;
+text-align: center;
+}
+
+.texto-anuncio{
+    font-size: 10px;
+    }
+
+/*Formato de formulario contacto*/
+
+.formulario_contacto { width: 100%;   }
