--- a/css/estilos.css
+++ b/css/estilos.css
@@ -484,6 +484,48 @@ text-align: center;
     font-size: 10px;
     }
 
+/*contenedor externo de formulario de contacto*/
+.contenedor_matriz{
+    width: 50%;
+    position:center;
+    margin: 0 auto;
+    
+}
+
 /*Formato de formulario contacto*/
 
-.formulario_contacto { width: 100%;   }
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+   
+    
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+  
+  /* Style the submit button with a specific background color etc */
+  input[type=submit] {
+    background-color: #f58c8c;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  /* When moving the mouse over the submit button, add a darker green color */
+  input[type=submit]:hover {
+    background-color: #993c3c;
+  }
+  
+  /* Add a background color and some padding around the form */
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
