--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,11 +66,11 @@ body {
 /*cololear imagen de arriba en el inicio*/
 header {
     width: 100%;
-    height: 600px;
+    height: 550px;
     background: #bc4e9c;
-    background: -webkit-linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/portada.jpg);
+    background: -webkit-linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/portada.jpg); /*preguntar a Victor*/
     background: linear-gradient(to right, hsla(340, 95%, 50%, 0.459), hsla(317, 45%, 52%, 0.664)), url(../img/portada.jpg);
-    background-size: cover;
+    background-size:contain;
     background-attachment: fixed;
     position: relative;
 }
@@ -517,7 +517,7 @@ input[type=text], select, textarea {
   
   /* Style the submit button with a specific background color etc */
   input[type=submit] {
-    background-color: #bd4d4d;
+    background-color: #db6868;
     color: white;
     padding: 12px 20px;
     border: none;
