--- a/css/estilos.css
+++ b/css/estilos.css
@@ -535,6 +535,7 @@ input[type=text], select, textarea {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
+    
   }
 
 /*Estilos para habilitar zoom de imágenes*/
@@ -623,4 +624,38 @@ input[type=text], select, textarea {
     .modal-content {
       width: 100%;
     }
+  }
+
+  /*Estilos de botón de descarga de imágenes*/
+
+  /* Container needed to position the button. Adjust the width as needed */
+.container {
+    position: relative;
+    width: 50%;
+  }
+  
+  /* Make the image responsive */
+  .container img {
+    width: 100%;
+    height: 200px;
+  }
+  
+  /* Style the button and place it in the middle of the container/image */
+  .container .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .container-button .btn:hover {
+    background-color: black;
   }
